--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calculator</title>
+    <title>Scooby Doo</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
@@ -9,40 +9,76 @@
   </head>
   <body>
     <div class="container">
-      <h1>Calculator</h1>
-      <form id="calculator">
+      <h1>Which Character Are You?</h1>
+      <h4>Answer the questions below to reveal your true self</h4>
+      <form id="food">
         <div class="form-group">
-          <label for="input1">1st number:</label>
-          <input id="input1" class="form-control" type="text">
+          <!-- <label for="input1">Enter Your favorite color:</label> -->
+          <!-- <input id="input1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="input2">2nd number:</label>
+          <label for="input2">Enter your favorite food:</label>
           <input id="input2" class="form-control" type="text">
+        </div> -->
+        <div>
+          ................
         </div>
+<!-- Question begin -->
         <div class="radio">
           <label>
-            <input type="radio" name="operator" value="add" checked>
-            add
+            <p>Which of the following foods would you pick as your favorite:</p>
+            <input type="radio" name="operator" value="grilledcheese" checked>
+            Grilled Cheese
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="operator" value="subtract">
-            subtract
+            <input type="radio" name="operator" value="tacos">
+            Tacos
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="operator" value="multiply">
-            multiply
+            <input type="radio" name="operator" value="hamburger">
+            Hamburgers
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="operator" value="divide">
-            divide
+            <input type="radio" name="operator" value="pizza">
+            Pizza
           </label>
         </div>
+
+
+        <div class="radio">
+          <label>
+            <p>Which of the following colors are your favorite:</p>
+            <input type="radio" name="operator" value="blue" checked>
+            Blue
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="red">
+            Red
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="yellow">
+            Yellow
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="purple">
+            Purple
+          </label>
+        </div>
+
+
+        <!-- Question end -->
         <button type="submit" class="btn">Go!</button>
       </form>
       <div id="output">
